--- a/main.css
+++ b/main.css
@@ -34,18 +34,13 @@ header .container #logo{
 	float:left;
 }
 header .container #logo img{
-	max-width:56px;
-	margin-top:21px;
+	max-width:40%;
+	box-sizing:border-box;
+	height:100px;
+	padding:15px 0 15px 0;
 	float:left;
-	margin-left:8px;
+	margin-left:15px;
 	margin-right:8px;
-}
-header .container #logo h1{
-	font-size:60px;
-	color:#262626;
-	font-family:lato;
-	float:left;
-	margin-top:14px;
 }
 header .container #account{
 	width:30%;
@@ -56,7 +51,6 @@ header .container #account img{
 	margin-top:25px;
 	margin-left:10px;
 	width:50px;
-	background:green;
 	height:50px;
 	float:left;
 }
